--- a/P2 | Telephone Number Validator  /index.html
+++ b/P2 | Telephone Number Validator  /index.html
@@ -1,20 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Telephone Number Validator</title>
-  <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RPG Creature Search</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Phone Number Validator</h1>
-    <input id="user-input" type="text" placeholder="Enter phone number..." />
-    <div class="button-container">
-      <button id="check-btn">Check</button>
-      <button id="clear-btn">Clear</button>
+    <div class="container">
+        <header>
+            <h1>RPG Creature Search</h1>
+            <p>Search for creatures by name or ID</p>
+        </header>
+
+        <div class="search-section">
+            <input type="text" id="search-input" placeholder="Enter creature name or ID" required>
+            <button id="search-button">Search</button>
+        </div>
+
+        <div class="creature-info" id="creature-info">
+            <div class="creature-header">
+                <h2 id="creature-name"></h2>
+                <span id="creature-id"></span>
+            </div>
+            
+            <div class="creature-stats">
+                <div class="stat-group">
+                    <div class="stat">
+                        <span class="stat-label">Weight:</span>
+                        <span id="weight"></span>
+                    </div>
+                    <div class="stat">
+                        <span class="stat-label">Height:</span>
+                        <span id="height"></span>
+                    </div>
+                </div>
+
+                <div class="types-section">
+                    <h3>Types:</h3>
+                    <div id="types"></div>
+                </div>
+
+                <div class="stats-grid">
+                    <div class="stat-card">
+                        <span class="stat-name">HP</span>
+                        <span id="hp" class="stat-value"></span>
+                    </div>
+                    <div class="stat-card">
+                        <span class="stat-name">Attack</span>
+                        <span id="attack" class="stat-value"></span>
+                    </div>
+                    <div class="stat-card">
+                        <span class="stat-name">Defense</span>
+                        <span id="defense" class="stat-value"></span>
+                    </div>
+                    <div class="stat-card">
+                        <span class="stat-name">Special Attack</span>
+                        <span id="special-attack" class="stat-value"></span>
+                    </div>
+                    <div class="stat-card">
+                        <span class="stat-name">Special Defense</span>
+                        <span id="special-defense" class="stat-value"></span>
+                    </div>
+                    <div class="stat-card">
+                        <span class="stat-name">Speed</span>
+                        <span id="speed" class="stat-value"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <p id="results-div"></p>
-  </div>
+
     <script src="script.js"></script>
 </body>
 </html>
